[gd_scene load_steps=85 format=3 uid="uid://dc6bqmduefhpy"]

[ext_resource type="Texture2D" uid="uid://baqcpbquym06p" path="res://Assets/Characters/Alex/Alex_idle_anim_32x32.png" id="1_62yxv"]
[ext_resource type="Script" path="res://Character/Character.gd" id="1_a58sx"]
[ext_resource type="PackedScene" uid="uid://1n847udyt1dh" path="res://Character/Thought_bubble.tscn" id="2_3cg4s"]
[ext_resource type="Texture2D" uid="uid://dtqpm5dh2qxv0" path="res://Assets/Characters/Alex/Alex_run_32x32.png" id="3_c6csl"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="3_rkn5k"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="4_d3qsh"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="5_ffq0e"]
[ext_resource type="Script" path="res://addons/godot_state_charts/parallel_state.gd" id="5_sln42"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="6_i6iwk"]
[ext_resource type="Script" path="res://Character/ProgressBar.gd" id="8_hrbt1"]
[ext_resource type="Script" path="res://addons/godot_state_charts/animation_tree_state.gd" id="9_1ppwh"]
[ext_resource type="Texture2D" uid="uid://dm41452pgyrkp" path="res://Assets/UI/target_character.png" id="11_yk30n"]
[ext_resource type="Texture2D" uid="uid://kmbgn2l3j84v" path="res://Assets/UI/speech_bubble.png" id="13_wnbxx"]
[ext_resource type="Texture2D" uid="uid://sddwt42x6d5t" path="res://Assets/UI/taskless.png" id="14_2qncv"]
[ext_resource type="Script" path="res://Character/BoredBubble.gd" id="14_fk0yj"]
[ext_resource type="Texture2D" uid="uid://ccmpucoqt7xxx" path="res://Assets/UI/stressed.png" id="15_8mhs1"]
[ext_resource type="Script" path="res://Character/TasklessBubble.gd" id="15_y8ecq"]
[ext_resource type="Script" path="res://Character/StressedBubble.gd" id="18_xmb2a"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6dchr"]
radius = 3.0

[sub_resource type="AtlasTexture" id="AtlasTexture_vs3u5"]
atlas = ExtResource("1_62yxv")
region = Rect2(576, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlpyq"]
atlas = ExtResource("1_62yxv")
region = Rect2(608, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ysykm"]
atlas = ExtResource("1_62yxv")
region = Rect2(640, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qoelo"]
atlas = ExtResource("1_62yxv")
region = Rect2(672, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtd4u"]
atlas = ExtResource("1_62yxv")
region = Rect2(704, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdqnl"]
atlas = ExtResource("1_62yxv")
region = Rect2(736, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cx1wu"]
atlas = ExtResource("3_c6csl")
region = Rect2(736, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uvaqe"]
atlas = ExtResource("3_c6csl")
region = Rect2(704, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sfcr4"]
atlas = ExtResource("3_c6csl")
region = Rect2(672, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ik7y"]
atlas = ExtResource("3_c6csl")
region = Rect2(640, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixcj6"]
atlas = ExtResource("3_c6csl")
region = Rect2(608, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sca4f"]
atlas = ExtResource("3_c6csl")
region = Rect2(576, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uojrb"]
atlas = ExtResource("3_c6csl")
region = Rect2(384, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2onl"]
atlas = ExtResource("3_c6csl")
region = Rect2(416, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mu1ay"]
atlas = ExtResource("3_c6csl")
region = Rect2(448, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqout"]
atlas = ExtResource("3_c6csl")
region = Rect2(480, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0stw"]
atlas = ExtResource("3_c6csl")
region = Rect2(512, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwfst"]
atlas = ExtResource("3_c6csl")
region = Rect2(544, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_at4fb"]
atlas = ExtResource("3_c6csl")
region = Rect2(160, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4efn"]
atlas = ExtResource("3_c6csl")
region = Rect2(128, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4g3fc"]
atlas = ExtResource("3_c6csl")
region = Rect2(96, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7msfb"]
atlas = ExtResource("3_c6csl")
region = Rect2(64, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mjkaq"]
atlas = ExtResource("3_c6csl")
region = Rect2(32, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_osojm"]
atlas = ExtResource("3_c6csl")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nronk"]
atlas = ExtResource("3_c6csl")
region = Rect2(192, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6uxa"]
atlas = ExtResource("3_c6csl")
region = Rect2(224, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3c08e"]
atlas = ExtResource("3_c6csl")
region = Rect2(256, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5nx2"]
atlas = ExtResource("3_c6csl")
region = Rect2(288, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_08oeg"]
atlas = ExtResource("3_c6csl")
region = Rect2(320, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_640k6"]
atlas = ExtResource("3_c6csl")
region = Rect2(352, 0, 32, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_d61m1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vs3u5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vlpyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ysykm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qoelo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtd4u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdqnl")
}],
"loop": true,
"name": &"Idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cx1wu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uvaqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sfcr4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ik7y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ixcj6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sca4f")
}],
"loop": true,
"name": &"Walk_Down",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uojrb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2onl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mu1ay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqout")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0stw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwfst")
}],
"loop": true,
"name": &"Walk_Left",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_at4fb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4efn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4g3fc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7msfb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mjkaq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_osojm")
}],
"loop": true,
"name": &"Walk_Right",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nronk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6uxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3c08e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5nx2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08oeg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_640k6")
}],
"loop": true,
"name": &"Walk_Up",
"speed": 8.0
}]

[sub_resource type="Animation" id="Animation_b2866"]
resource_name = "Idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_dwpby"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_djix6"]
resource_name = "Walk_Down"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Walk_Down"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_2v548"]
resource_name = "Walk_Left"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Walk_Left"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_b06u6"]
resource_name = "Walk_Right"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Walk_Right"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_d7pju"]
resource_name = "Walk_Up"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Walk_Up"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0bmyr"]
_data = {
"Idle": SubResource("Animation_b2866"),
"RESET": SubResource("Animation_dwpby"),
"Walk_Down": SubResource("Animation_djix6"),
"Walk_Left": SubResource("Animation_2v548"),
"Walk_Right": SubResource("Animation_b06u6"),
"Walk_Up": SubResource("Animation_d7pju")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_t0el0"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sxibp"]
animation = &"Walk_Up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1ayw7"]
animation = &"Walk_Down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_10kdc"]
animation = &"Walk_Right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5y6os"]
animation = &"Walk_Left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_cxdqo"]
blend_point_0/node = SubResource("AnimationNodeAnimation_sxibp")
blend_point_0/pos = Vector2(0, -1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_1ayw7")
blend_point_1/pos = Vector2(0, 1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_10kdc")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_5y6os")
blend_point_3/pos = Vector2(-0.8, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_u4dgr"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jopto"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_55esx"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_0an5j"]
states/Idle/node = SubResource("AnimationNodeAnimation_t0el0")
states/Idle/position = Vector2(233, 99.875)
states/Move/node = SubResource("AnimationNodeBlendSpace2D_cxdqo")
states/Move/position = Vector2(419.5, 100.75)
states/Start/position = Vector2(93.5, 99.75)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_u4dgr"), "Idle", "Move", SubResource("AnimationNodeStateMachineTransition_jopto"), "Move", "Idle", SubResource("AnimationNodeStateMachineTransition_55esx")]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7elrd"]
size = Vector2(28, 40)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ljoxb"]
bg_color = Color(0.298039, 0.690196, 0.223529, 0.282353)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mmio0"]
bg_color = Color(0.4, 0.678431, 0.258824, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_xk2a3"]
atlas = ExtResource("14_2qncv")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1fgb"]
atlas = ExtResource("14_2qncv")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4upbl"]
atlas = ExtResource("14_2qncv")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8l3i1"]
atlas = ExtResource("14_2qncv")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6hxh"]
atlas = ExtResource("14_2qncv")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ht82x"]
atlas = ExtResource("14_2qncv")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0i68"]
atlas = ExtResource("14_2qncv")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w3cyh"]
atlas = ExtResource("14_2qncv")
region = Rect2(224, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_37gkf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xk2a3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1fgb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4upbl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8l3i1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6hxh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ht82x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0i68")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3cyh")
}],
"loop": false,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_6x7og"]
atlas = ExtResource("15_8mhs1")
region = Rect2(0, 0, 31, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s21hh"]
atlas = ExtResource("15_8mhs1")
region = Rect2(31, 0, 31, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2h32q"]
atlas = ExtResource("15_8mhs1")
region = Rect2(62, 0, 31, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ygpe"]
atlas = ExtResource("15_8mhs1")
region = Rect2(93, 0, 31, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_k5vwv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6x7og")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s21hh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2h32q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ygpe")
}],
"loop": false,
"name": &"default",
"speed": 8.0
}]

[node name="Character" type="CharacterBody2D" groups=["character"]]
script = ExtResource("1_a58sx")
min_distance = 50.0
thought_bubble = ExtResource("2_3cg4s")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 29)
shape = SubResource("CircleShape2D_6dchr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_d61m1")
animation = &"Idle"
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0bmyr")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0bmyr")
}
tree_root = SubResource("AnimationNodeStateMachine_0an5j")
anim_player = NodePath("../AnimationPlayer")
parameters/Move/blend_position = Vector2(-0.632558, 0.568766)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
radius = 50.0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 11)
shape = SubResource("RectangleShape2D_7elrd")
debug_color = Color(0.533333, 0.564706, 0.219608, 0.419608)

[node name="StateChart" type="Node" parent="."]
script = ExtResource("3_rkn5k")

[node name="CompoundState" type="Node" parent="StateChart"]
script = ExtResource("4_d3qsh")
initial_state = NodePath("Inactive")

[node name="Active" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("5_sln42")

[node name="Actions" type="Node" parent="StateChart/CompoundState/Active"]
script = ExtResource("4_d3qsh")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateChart/CompoundState/Active/Actions"]
script = ExtResource("5_ffq0e")

[node name="Manual Target" type="Node" parent="StateChart/CompoundState/Active/Actions/Idle"]
script = ExtResource("6_i6iwk")
to = NodePath("../../Moving")
event = &"set_target"

[node name="Auto Target" type="Node" parent="StateChart/CompoundState/Active/Actions/Idle"]
script = ExtResource("6_i6iwk")
to = NodePath("../../Moving")
delay_seconds = 10.0

[node name="Moving" type="Node" parent="StateChart/CompoundState/Active/Actions"]
script = ExtResource("5_ffq0e")

[node name="Reached Target" type="Node" parent="StateChart/CompoundState/Active/Actions/Moving"]
script = ExtResource("6_i6iwk")
to = NodePath("../../Using")
event = &"reached_target"

[node name="Using" type="Node" parent="StateChart/CompoundState/Active/Actions"]
script = ExtResource("5_ffq0e")

[node name="Finished Using" type="Node" parent="StateChart/CompoundState/Active/Actions/Using"]
script = ExtResource("6_i6iwk")
to = NodePath("../../Idle")
delay_seconds = 3.0

[node name="Animations" type="Node" parent="StateChart/CompoundState/Active"]
script = ExtResource("4_d3qsh")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateChart/CompoundState/Active/Animations"]
script = ExtResource("9_1ppwh")
animation_tree = NodePath("../../../../../AnimationTree")

[node name="Set Target" type="Node" parent="StateChart/CompoundState/Active/Animations/Idle"]
script = ExtResource("6_i6iwk")
to = NodePath("../../Move")
event = &"set_target"

[node name="Move" type="Node" parent="StateChart/CompoundState/Active/Animations"]
script = ExtResource("9_1ppwh")
animation_tree = NodePath("../../../../../AnimationTree")

[node name="Reached Target" type="Node" parent="StateChart/CompoundState/Active/Animations/Move"]
script = ExtResource("6_i6iwk")
to = NodePath("../../Idle")
event = &"reached_target"

[node name="Inactive" type="Node" parent="StateChart/CompoundState/Active"]
script = ExtResource("6_i6iwk")
to = NodePath("../../Inactive")
event = &"inactivated"

[node name="Inactive" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("5_ffq0e")

[node name="Activate" type="Node" parent="StateChart/CompoundState/Inactive"]
script = ExtResource("6_i6iwk")
to = NodePath("../../Active")
event = &"activated"

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
offset_left = -29.0
offset_top = -32.0
offset_right = 120.0
offset_bottom = 5.0
scale = Vector2(0.408155, 0.408155)
theme_override_font_sizes/font_size = 24
theme_override_styles/background = SubResource("StyleBoxFlat_ljoxb")
theme_override_styles/fill = SubResource("StyleBoxFlat_mmio0")
script = ExtResource("8_hrbt1")

[node name="Highlight" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, 8)
texture = ExtResource("11_yk30n")

[node name="BusyBubble" type="Sprite2D" parent="."]
visible = false
position = Vector2(39, -18)
scale = Vector2(0.875, 0.875)
texture = ExtResource("13_wnbxx")

[node name="Label" type="Label" parent="BusyBubble"]
offset_left = -26.2857
offset_top = -9.14286
offset_right = 37.7143
offset_bottom = 6.85714
scale = Vector2(0.833558, 0.833558)
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "I'm busy!"

[node name="BoredBubble" type="Sprite2D" parent="."]
visible = false
position = Vector2(39, -18)
scale = Vector2(0.875, 0.875)
texture = ExtResource("13_wnbxx")
script = ExtResource("14_fk0yj")

[node name="Label" type="Label" parent="BoredBubble"]
offset_left = -21.4286
offset_top = -9.0
offset_right = 35.5714
offset_bottom = 7.0
scale = Vector2(0.833558, 0.833558)
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "bored..."

[node name="TasklessBubble" type="AnimatedSprite2D" parent="."]
position = Vector2(24, -21)
sprite_frames = SubResource("SpriteFrames_37gkf")
frame_progress = 1.0
script = ExtResource("15_y8ecq")

[node name="StressedBubble" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(26, -21)
sprite_frames = SubResource("SpriteFrames_k5vwv")
frame = 3
frame_progress = 1.0
script = ExtResource("18_xmb2a")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="state_entered" from="StateChart/CompoundState/Active" to="." method="_on_active_state_entered"]
[connection signal="state_entered" from="StateChart/CompoundState/Active" to="TasklessBubble" method="_on_active_state_entered"]
[connection signal="state_exited" from="StateChart/CompoundState/Active/Actions/Idle" to="TasklessBubble" method="_on_idle_state_exited"]
[connection signal="taken" from="StateChart/CompoundState/Active/Actions/Idle/Auto Target" to="." method="_on_auto_target_taken"]
[connection signal="taken" from="StateChart/CompoundState/Active/Actions/Idle/Auto Target" to="BoredBubble" method="_on_auto_target_taken"]
[connection signal="state_physics_processing" from="StateChart/CompoundState/Active/Actions/Moving" to="." method="_on_moving_state_physics_processing"]
[connection signal="state_entered" from="StateChart/CompoundState/Active/Actions/Using" to="." method="_on_using_state_entered"]
[connection signal="state_entered" from="StateChart/CompoundState/Active/Actions/Using" to="ProgressBar" method="_on_using_state_entered"]
[connection signal="state_exited" from="StateChart/CompoundState/Active/Actions/Using" to="." method="_on_using_state_exited"]
[connection signal="state_exited" from="StateChart/CompoundState/Active/Actions/Using" to="ProgressBar" method="_on_using_state_exited"]
[connection signal="state_physics_processing" from="StateChart/CompoundState/Active/Actions/Using" to="ProgressBar" method="_on_using_state_physics_processing"]
[connection signal="taken" from="StateChart/CompoundState/Active/Inactive" to="StressedBubble" method="_on_inactive_taken"]
